--- a/technologies/technologies.css
+++ b/technologies/technologies.css
@@ -49,3 +49,82 @@ body {
         }
     }
 }
+
+.technologies-section {
+    height: calc(100vh - 90px);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 60px;
+    gap: 30px;
+
+    h2.title {
+        font-size: 35px;
+        color: #1b4332;
+        text-align: center;       
+    }
+}
+
+.tech-cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 20px;
+
+    .card {
+        background-color: #d8f3dc;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 16px;
+        padding: 30px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        gap: 20px;
+
+        &:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+        }
+
+        .card-content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 20px;
+            width: fit-content;
+            height: 100%;
+        }
+
+        h3 {
+            font-size: 25px;
+            color: #1b4332;
+            text-align: center;
+        }
+
+        h4 {
+            font-size: 20px;
+            color: #1b4332;
+            text-align: center;
+        }
+
+        .row-items {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            gap: 25px;
+        }
+    }
+}
+
+.tech-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    img {
+        width: auto;
+        height: 100px;
+    }
+}
