--- a/project/project.css
+++ b/project/project.css
@@ -37,3 +37,10 @@ a {
 .all-container {
     margin: 3%;
 }
+ 
+@media screen and (max-width: 768px) {
+    .text {
+        width: 100%;
+    }
+    
+}
