--- a/technologies/technologies.css
+++ b/technologies/technologies.css
@@ -1,5 +1,4 @@
 .technologies-section {
-    height: calc(100vh - 90px);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -15,8 +14,10 @@
 
 .tech-cards-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: minmax(300px, 1fr) minmax(300px, 1fr) minmax(300px, 1fr);
     gap: 20px;
+
+    margin-bottom: 2rem;
 
     .card {
         background-color: #d8f3dc;
